Cabal-Version:       2.2
Name:                evolution
Version:             0.1.0

Homepage:            
Bug-Reports:         

Author:              Merijn Verstraaten
Maintainer:          Merijn Verstraaten <merijn@inconsistent.nl>
Copyright:           Copyright © 2015 Merijn Verstraaten

License:             GPL-3.0-or-later
License-File:        LICENSE

Category:            System
Build-Type:          Simple
Tested-With:         GHC == 7.10

Synopsis:            

Description:

Executable darwin
  Default-Language:     Haskell2010
  GHC-Options:          -O2 -Wall -fno-warn-unused-do-bind -threaded
                        -fno-warn-unticked-promoted-constructors
  Main-Is:              Server.hs
  Other-Modules:        

  Build-Depends:        base
               ,        async ^>= 2.1 || ^>= 2.2
               ,        containers
               ,        directory
               ,        evolution
               ,        exceptions ^>= 0.10.0
               ,        foldl ^>= 1.4
               ,        mtl ^>= 2.2.1
               ,        mwc-random ^>= 0.14
               ,        optparse-applicative ^>= 0.15
               ,        pipes ^>= 4.3.0
               ,        profunctors ^>= 5.4
               ,        random-extras ^>= 0.19
               ,        random-fu ^>= 0.2.7
               ,        process ^>= 1.6.0
               ,        temporary ^>= 1.3
               ,        text ^>= 1.2
               ,        transformers ^>= 0.5

Executable breeding-pool
  Default-Language:     Haskell2010
  GHC-Options:          -O2 -Wall -fno-warn-unused-do-bind -threaded
                        -fno-warn-unticked-promoted-constructors
  Main-Is:              Client.hs
  Other-Modules:        

  Build-Depends:        base
               ,        bytestring ^>= 0.10.0
               ,        broadcast-chan ^>= 0.2.0
               ,        containers
               ,        directory
               ,        evolution
               ,        exceptions ^>= 0.10.0
               ,        managed ^>= 1.0.0
               ,        mtl ^>= 2.2.1
               ,        network ^>= 2.8
               ,        optparse-applicative ^>= 0.15
               ,        pipes ^>= 4.3.0
               ,        process ^>= 1.6.0
               ,        temporary ^>= 1.3
               ,        text ^>= 1.2
               ,        transformers ^>= 0.5
               ,        unix ^>= 2.7.0

Library
  Default-Language:     Haskell2010
  GHC-Options:          -Wall -fno-warn-unused-do-bind
                        -fno-warn-unticked-promoted-constructors
  GHC-Prof-Options:     -auto-all -caf-all
  Default-Extensions:   
  Hs-Source-Dirs:       src
  Exposed-Modules:      Process
  Other-Modules:        

  Build-Depends:        base
               ,        binary ^>= 0.8
               ,        bytestring ^>= 0.10
               ,        containers ^>= 0.5
               ,        exceptions ^>= 0.10.0
               ,        mtl ^>= 2.2.1
               ,        network ^>= 2.8
               ,        pipes ^>= 4.3.0
               ,        pipes-binary ^>= 0.4.0
               ,        pipes-concurrency ^>= 2.0
               ,        pipes-parse ^>= 3.0
               ,        pipes-safe ^>= 2.3
               ,        process ^>= 1.6.0
               ,        stm ^>= 2.5
               ,        text ^>= 1.2


Source-Repository head
  Type:     git
  Location: git+ssh://github.com:merijn/GPU-benchmarks
