Cabal-Version:       2.2
Name:                evolution
Version:             0.1.0

Homepage:            
Bug-Reports:         

Author:              Merijn Verstraaten
Maintainer:          Merijn Verstraaten <merijn@inconsistent.nl>
Copyright:           Copyright © 2015-2020 Merijn Verstraaten

License:             GPL-3.0-or-later
License-File:        LICENSE

Category:            System
Build-Type:          Simple
Tested-With:         GHC == 8.10

Synopsis:            

Description:

Common all
  Default-Language:     Haskell2010
  GHC-Options:          -O2 -Wall -fno-warn-unused-do-bind
                        -fno-warn-unticked-promoted-constructors

  Build-Depends:        base
               ,        containers >= 0.5.11 && < 0.7
               ,        exceptions ^>= 0.10.0
               ,        mtl ^>= 2.2.1
               ,        pipes ^>= 4.3.0
               ,        process ^>= 1.6.0
               ,        text ^>= 1.2.3.2

Common exes
  GHC-Options:          -threaded

  Build-Depends:        evolution
               ,        directory
               ,        optparse-applicative ^>= 0.15
               ,        temporary ^>= 1.3
               ,        transformers ^>= 0.5

Executable darwin
  Import:               all, exes
  Main-Is:              Server.hs
  Other-Modules:        

  Build-Depends:        base
               ,        async ^>= 2.1 || ^>= 2.2
               ,        foldl ^>= 1.4
               ,        mwc-random ^>= 0.14
               ,        profunctors ^>= 5.4
               ,        random-extras ^>= 0.19
               ,        random-fu ^>= 0.2.7

Executable breeding-pool
  Import:               all, exes
  Main-Is:              Client.hs
  Other-Modules:        

  Build-Depends:        base
               ,        bytestring ^>= 0.10.8
               ,        broadcast-chan ^>= 0.2.0
               ,        managed ^>= 1.0.0
               ,        network ^>= 2.8
               ,        unix ^>= 2.7.0

Library
  Import:               all
  Hs-Source-Dirs:       src
  Exposed-Modules:      Process
  Other-Modules:        

  Build-Depends:        base
               ,        binary ^>= 0.8.7
               ,        bytestring ^>= 0.10.8
               ,        network ^>= 2.8
               ,        pipes-binary ^>= 0.4.0
               ,        pipes-concurrency ^>= 2.0
               ,        pipes-parse ^>= 3.0
               ,        pipes-safe ^>= 2.3
               ,        stm ^>= 2.5.0

Source-Repository head
  Type:     git
  Location: git+ssh://github.com:merijn/Belewitte
