Cabal-Version:       2.2
Name:                evolution
Version:             0.1.0

Homepage:            
Bug-Reports:         

Author:              Merijn Verstraaten
Maintainer:          Merijn Verstraaten <merijn@inconsistent.nl>
Copyright:           Copyright © 2015-2020 Merijn Verstraaten

License:             GPL-3.0-or-later
License-File:        LICENSE

Category:            System
Build-Type:          Simple
Tested-With:         GHC == 8.10

Synopsis:            

Description:

Common all
  Default-Language:     Haskell2010
  GHC-Options:          -O2 -Wall -fno-warn-unused-do-bind
                        -fno-warn-unticked-promoted-constructors

  Build-Depends:        base
               ,        containers ^>= 0.6.6
               ,        exceptions ^>= 0.10.7
               ,        mtl ^>= 2.3.1
               ,        pipes ^>= 4.3.16
               ,        process ^>= 1.6.16.0
               ,        text ^>= 2.0.2

Common exes
  GHC-Options:          -threaded

  Build-Depends:        evolution
               ,        directory
               ,        optparse-applicative ^>= 0.17
               ,        temporary ^>= 1.3
               ,        transformers

Executable darwin
  Import:               all, exes
  Main-Is:              Server.hs
  Other-Modules:        WeightedShuffle

  Build-Depends:        base
               ,        async ^>= 2.2.4
               ,        foldl ^>= 1.4.14
               ,        mwc-random ^>= 0.15.0.2
               ,        profunctors ^>= 5.6.2
               ,        random-fu ^>= 0.3.0.1

Executable breeding-pool
  Import:               all, exes
  Main-Is:              Client.hs
  Other-Modules:        

  Build-Depends:        base
               ,        bytestring ^>= 0.11.4.0
               ,        broadcast-chan ^>= 0.2.1.2
               ,        managed ^>= 1.0.9
               ,        network ^>= 3.1.2.9
               ,        unix ^>= 2.8.1.1

Library
  Import:               all
  Hs-Source-Dirs:       src
  Exposed-Modules:      Process
  Other-Modules:        

  Build-Depends:        base
               ,        binary ^>= 0.8.9.1
               ,        bytestring ^>= 0.11.4.0
               ,        network ^>= 3.1.2.9
               ,        pipes-binary ^>= 0.4.3
               ,        pipes-concurrency ^>= 2.0.14
               ,        pipes-parse ^>= 3.0.9
               ,        pipes-safe ^>= 2.3.4
               ,        stm ^>= 2.5.1.0

Source-Repository head
  Type:     git
  Location: git+ssh://github.com:merijn/Belewitte
