Cabal-Version:       2.2
Name:                plotting
Version:             0.1.0

Homepage:            
Bug-Reports:         

Author:              Merijn Verstraaten
Maintainer:          Merijn Verstraaten <merijn@inconsistent.nl>
Copyright:           Copyright © 2017-2020 Merijn Verstraaten

License:             GPL-3.0-or-later
License-File:        LICENSE

Category:            System
Build-Type:          Simple
Tested-With:         GHC == 8.10

Synopsis:            

Description:

Flag has-cairo
  Description:          Building this executable only if cairo is available.
  Manual:               False
  Default:              True

Executable PlotGraph
  Default-Language:     Haskell2010
  GHC-Options:          -O2 -Wall -fno-warn-unused-do-bind -rtsopts
  GHC-Prof-Options:     -fprof-auto
  Main-Is:              Plot.hs

  Build-Depends:        base
               ,        attoparsec ^>= 0.13.1
               ,        bytestring ^>= 0.10.8
               ,        Chart ^>= 1.9.3

  if flag(has-cairo)
    Build-Depends:      Chart-cairo ^>= 1.9.3
  else
    Buildable:          False

Source-Repository head
  Type:     git
  Location: git+ssh://github.com:merijn/Belewitte
