Cabal-Version:       2.2
Name:                process-tools
Version:             0.1.0

Homepage:            
Bug-Reports:         

Author:              Merijn Verstraaten
Maintainer:          Merijn Verstraaten <merijn@inconsistent.nl>
Copyright:           Copyright © 2020 Merijn Verstraaten

License:             GPL-3.0-or-later
License-File:        LICENSE

Category:            System
Build-Type:          Simple
Tested-With:         GHC == 8.10

Synopsis:            

Description:

Library
  Default-Language:     Haskell2010
  GHC-Options:          -O2 -Wall -fno-warn-unused-do-bind

  Exposed-Modules:      ProcessTools
  Other-Modules:        

  Other-Extensions:     

  Build-Depends:        base
               ,        conduit-extra ^>= 1.3.4
               ,        exceptions ^>= 0.10.0
               ,        monad-logger ^>= 0.3.28
               ,        mtl ^>= 2.2.1
               ,        prettyprinter ^>= 1.6.0
               ,        process ^>= 1.6.0
               ,        resourcet ^>= 1.2.0
               ,        streaming-commons ^>= 0.2.1
               ,        text ^>= 1.2.3.2
               ,        transformers
               ,        unix ^>= 2.7.0

Source-Repository head
  Type:     git
  Location: git+ssh://github.com:merijn/Belewitte
