Cabal-Version:       2.2
Name:                process-tools
Version:             0.1.0

Homepage:            
Bug-Reports:         

Author:              Merijn Verstraaten
Maintainer:          Merijn Verstraaten <merijn@inconsistent.nl>
Copyright:           Copyright © 2020 Merijn Verstraaten

License:             GPL-3.0-or-later
License-File:        LICENSE

Category:            System
Build-Type:          Simple
Tested-With:         GHC == 8.10

Synopsis:            

Description:

Library
  Default-Language:     Haskell2010
  GHC-Options:          -O2 -Wall -fno-warn-unused-do-bind

  Exposed-Modules:      ProcessTools
                        ProcessTools.Pool

  Other-Extensions:     NamedFieldPuns
                        OverloadedStrings
                        RankNTypes
                        RecordWildCards

  Build-Depends:        base
               ,        broadcast-chan-conduit ^>= 0.2.1
               ,        bytestring ^>= 0.10.8
               ,        conduit ^>= 1.3.1.1
               ,        conduit-extra ^>= 1.3.4
               ,        directory ^>= 1.3.4.0
               ,        exceptions ^>= 0.10.0
               ,        filepath ^>= 1.4.0
               ,        hostname ^>= 1.0
               ,        monad-logger ^>= 0.3.28
               ,        mtl ^>= 2.2.1
               ,        prettyprinter ^>= 1.6.0
               ,        prettyprinter-ansi-terminal ^>= 1.1.1
               ,        process ^>= 1.6.0
               ,        resource-pool ^>= 0.2.3.2
               ,        resourcet ^>= 1.2.0
               ,        streaming-commons ^>= 0.2.1
               ,        text ^>= 1.2.3.2
               ,        time ^>= 1.9
               ,        transformers
               ,        unix ^>= 2.7.0
               ,        unliftio-core ^>= 0.2.0.1

Source-Repository head
  Type:     git
  Location: git+ssh://github.com:merijn/Belewitte
