Cabal-Version:       2.2
Name:                process-tools
Version:             0.1.0

Homepage:            
Bug-Reports:         

Author:              Merijn Verstraaten
Maintainer:          Merijn Verstraaten <merijn@inconsistent.nl>
Copyright:           Copyright © 2020-2023 Merijn Verstraaten

License:             GPL-3.0-or-later
License-File:        LICENSE

Category:            System
Build-Type:          Simple
Tested-With:         GHC == 8.10.7, GHC == 9.2.7, GHC == 9.4.5, GHC == 9.6.1

Synopsis:            

Description:

Library
  Default-Language:     Haskell2010
  GHC-Options:          -O2 -Wall -fno-warn-unused-do-bind

  Exposed-Modules:      ProcessTools
                        ProcessTools.Pool

  Other-Extensions:     NamedFieldPuns
                        OverloadedStrings
                        RankNTypes
                        RecordWildCards

  Build-Depends:        base
               ,        broadcast-chan-conduit ^>= 0.2.1.2
               ,        bytestring ^>= 0.11.4.0
               ,        conduit ^>= 1.3.4.3
               ,        conduit-extra ^>= 1.3.6
               ,        directory ^>= 1.3.8.1
               ,        exceptions ^>= 0.10.7
               ,        filepath ^>= 1.4.100.0
               ,        hostname ^>= 1.0
               ,        monad-logger ^>= 0.3.39
               ,        mtl ^>= 2.3.1
               ,        prettyprinter ^>= 1.7.1
               ,        prettyprinter-ansi-terminal ^>= 1.1.3
               ,        process ^>= 1.6.16.0
               ,        resource-pool ^>= 0.4.0.0
               --       resourcet 1.3.0 is not supported by broadcast-chan
               ,        resourcet ^>= 1.2.0
               ,        streaming-commons ^>= 0.2.2.5
               ,        text ^>= 2.0.2
               ,        time ^>= 1.12.2
               ,        transformers
               ,        unix ^>= 2.8.1.1
               ,        unliftio-core ^>= 0.2.0.1

  -- GHC 9.0 produces broken code and is unusable
  if impl(ghc == 9.0.*)
    Buildable:          False

Source-Repository head
  Type:     git
  Location: git+ssh://github.com:merijn/Belewitte
